@@ -19,7 +19,7 @@ Connecting to 127.0.0.1 [127.0.0.1]:1224 ... connected
   SMTP<< 250 OK
   SMTP>> QUIT
 LOG: MAIN
-  => userx@domain.com R=all T=smtp H=127.0.0.1 [127.0.0.1] C="250 OK"
+  => userx@domain.com R=all T=smtp H=127.0.0.1 [127.0.0.1] A=plain C="250 OK"
 LOG: MAIN
   Completed
 LOG: MAIN
@@ -43,7 +43,7 @@ Connecting to 127.0.0.1 [127.0.0.1]:1224 ... connected
   SMTP<< 250 OK
   SMTP>> QUIT
 LOG: MAIN
-  => userx@domain.com R=all T=smtp H=127.0.0.1 [127.0.0.1] C="250 OK"
+  => userx@domain.com R=all T=smtp H=127.0.0.1 [127.0.0.1] A=plain C="250 OK"
 LOG: MAIN
   Completed
 LOG: MAIN
@@ -71,6 +71,6 @@ Connecting to 127.0.0.1 [127.0.0.1]:1224 ... connected
   SMTP<< 250 OK
   SMTP>> QUIT
 LOG: MAIN
-  => userx@domain.com R=all T=smtp H=127.0.0.1 [127.0.0.1] C="250 OK"
+  => userx@domain.com R=all T=smtp H=127.0.0.1 [127.0.0.1] A=login C="250 OK"
 LOG: MAIN
   Completed
