@@ -1,6 +1,7 @@
 
 a1 authenticator:
 client_condition = 
+client_set_id = 
 driver = plaintext
 public_name = PLAIN
 server_advertise_condition = 
@@ -14,6 +15,7 @@ server_prompts =
 
 a2 authenticator:
 client_condition = 
+client_set_id = 
 driver = plaintext
 public_name = PLAIN
 server_advertise_condition = 
@@ -27,6 +29,7 @@ server_prompts =
 
 a3 authenticator:
 client_condition = 
+client_set_id = 
 driver = plaintext
 public_name = LOGIN
 server_advertise_condition = 
@@ -40,6 +43,7 @@ server_prompts =
 
 a4 authenticator:
 client_condition = 
+client_set_id = 
 driver = plaintext
 public_name = LOGIN
 server_advertise_condition = 
