@@ -77,12 +77,14 @@ JH/08 Strip leading/trailing newlines from add_header ACL modifier data.
 JH/09 Add $headers_added variable, with content from use of ACL modifier
       add_header (but not yet added to the message).  Bugzilla 199.
 
-
 JH/10 Add 8bitmime log_selector, for 8bitmime status on the received line.
       Pulled from Bugzilla 817 by Wolfgang Breyha.
 
 PP/11 SECURITY: protect DKIM DNS decoding from remote exploit.
       CVE-2012-5671
+
+JH/11 Add A= logging on delivery lines, and a client_set_id option on
+      authenticators.
 
 
 Exim version 4.80.1
